# 42-cub3d

./: CMakeLists.txt  Makefile  MakefileLinux  README.md  checkers.c  closing.c  color_parsing.c  config_parsing.c  cub3D  cub3d.c  cub3d.h  functions.h  gnl.c  input.c  libft.c  libft_2.c  libft_3.c  macros.h  map.cub  map_hole.cub  map_invalid.cub  map_parsing.c  map_parsing_2.c  movement.c  raycasting.c  raycasting_2.c  save_screenshot.c  sprites.c  structs.h  structs_initializer.c  textures_processing.c
images/: blue42.xpm  light_green42.xpm  poster42.xpm  red42.xpm  yellow42.xpm
mlx/linux/: mlx.h
